Import of CUB/Catalyst-TraitFor-Request-Params-Hashed-0.02 from CPAN.
gitpan-cpan-distribution: Catalyst-TraitFor-Request-Params-Hashed
gitpan-cpan-version:      0.02
gitpan-cpan-path:         CUB/Catalyst-TraitFor-Request-Params-Hashed-0.02.tar.gz
gitpan-cpan-author:       CUB
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,6 +2,9 @@ NAME
     Catalyst::TraitFor::Request::Params::Hashed - Access to parameters like
     "name[index]" as hashes for Catalyst::Request.
 
+VERSION
+    Version is 0.02
+
 SYNOPSIS
         #
         # application class
@@ -57,17 +60,26 @@ METHODS
 TODO
     Write tests.
 
-REPOSITORY
-    Project is hosted at GitHub:
-
-        git://github.com/cub-uanic/c-t-request-params-hashed.git
-
 SEE ALSO
     Catalyst, Catalyst::Request,
     "Catalyst::TraitFor::Request::BrowserDetect"
 
+SUPPORT
+    *   Report bugs or feature requests
+
+        <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Catalyst-TraitFor-Re
+        quest-Params-Hashed>
+
+        <http://www.assembla.com/spaces/Catalyst-TraitFor-Request-Params-Has
+        hed/tickets>
+
+    *   Git repository
+
+        git clone
+        git://git.assembla.com/Catalyst-TraitFor-Request-Params-Hashed.git
+
 AUTHOR
-    Oleg Kostyuk, "<cub at cpan.org>"
+    Oleg Kostyuk, "<cub#cpan.org>"
 
 COPYRIGHT & LICENSE
     Copyright 2009 Oleg Kostyuk.
